[package]
name = "handyman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
clap = { version = "4.2.1", features = ["derive"] }
color-eyre = "0.6.2"
futures = "0.3.28"
log = "0.4.17"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-subscriber = "0.3.16"
which = "4.4.0"

[dev-dependencies]
tempfile = "3.5.0"
