[package]
name = "handyman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
clap = { version = "4.3.3", features = ["derive"] }
color-eyre = "0.6.2"
futures = "0.3.28"
log = "0.4.19"
reqwest = "0.11.18"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.5"
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-subscriber = "0.3.17"
which = "4.4.0"

[dev-dependencies]
tempfile = "3.6.0"
